# ros-facetracking

./: CMakeLists.txt  README.md  package.xml
include/: detection.h  face_constants.h  facetracking.h  human.h  recognition.h
src/: detection.cpp  detection.h  facetracking.cpp  human.cpp  human.h  main.cpp  recognition.cpp  recognition.h  smiledetect.cpp
testing/: CMakeLists.txt  annotator.cpp  tracking.cpp
